--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://chandanrabha.github.io/portfolio",
+  "homepage": "http://chandanrabha.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
+    "webpack-cli": "^4.4.0"
   }
 }
