--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "CR Portfolio",
-  "name": "Welcome to Chandan's Dungeon",
+  "name": "Hi There",
   "icons": [
     {
       "src": "favicon.png",
