Update homepage URL in package.json as per custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://chandanrabha.github.io/portfolio",
+  "homepage": "https://chandanrabha.com"",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
