Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chandanrabha.com",
+  "homepage": "https://chandanrabha1.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
