--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chandanrabha1.com",
+  "homepage": "https://chandanrabha.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +12,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "file-loader": "^6.2.0",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^6.3.0",
     "webpack-cli": "^4.4.0"
   }
 }
